# Pytorch

./: .gitignore  pyproject.toml
ExamPS/: animals.py  main.py  main2.py  vehicle.py
ExamPS/data/: Animals.txt  Data.txt
NNClassification/: 02_pytorch_classification.ipynb
PyTorchFundamentals/: tensors.ipynb
PyTorchWorkFlow/: workflow.ipynb
PyTorchWorkFlow/models/: 01_pytorch_workflow_model_0.pth
PyTorchWorkFlow/runs/Feb18_17-46-49_DESKTOP-04CIN5B/: events.out.tfevents.1771418809.DESKTOP-04CIN5B.32220.2
PytorchComputerVision/: ImageClassification.ipynb  PreTrainedModelBeans.ipynb  RiceClassification.ipynb
WorldCupFootball/: notebook.ipynb
