[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "legacy-cgi>=2.6.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opendatasets>=0.1.22",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "torchsummary>=1.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv]
index-strategy = "unsafe-best-match"
